Fantom checkbox on IOS apparently fixed

--- a/catalog/style.css
+++ b/catalog/style.css
@@ -100,6 +100,7 @@ li {
 }
 
 .checkbox-input {
+    -webkit-appearance: none;
     appearance: none;
     position: absolute;
 }
